post_service/deploy/post-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service
  labels:
    app: post-service
    service: post-service
spec:
  ports:
    - port: 8019
      name: post-service-port
      appProtocol: grpc
  selector:
    app: post-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service
  labels:
    app: post-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
        - name: post-service
          image: post-service:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8019
          volumeMounts:
            - name: config
              mountPath: /service/conf
      volumes:
        - name: config
          configMap:
            name: post-service-config
