post_service/deploy/post-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: post-service-vs
spec:
  hosts:
    - "post-service"
  http:
    - route:
        - destination:
            host: post-service
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: post-service-dr
spec:
  host: post-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
